--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <main>
-	<idr_introducao></idr_introducao>
+	<idr-introducao></idr-introducao>
+	<idr-historia></idr-historia>
+	<idr-projetos></idr-projetos>
 </main>
