--- a/src/app/1_introducao/introducao.component.html
+++ b/src/app/1_introducao/introducao.component.html
@@ -1,6 +1,25 @@
 <section class="content-introducao">
-	<h1>Olá, me chamo Igor, seja Bem-Vindo! =)</h1>
 	<figure>
-		<img alt="Foto de Igor D. Rangel" src=""/>
+		<img alt="Foto de Igor D. Rangel" src="/assets/profile.jpg"/>
 	</figure>
+	<h1>Olá, me chamo Igor, seja Bem-Vindo! =)</h1>
+	<p>Atualmente estou cursando <strong>Bacharelado em Engenharia de Software</strong> e encontro-me empregado como <strong>Supervisor de Desenvolvimento</strong> em uma empresa de Empréstimos Consignados, onde crio soluções WEB como <strong>Aplicativos</strong> e <strong>Sistemas WEB</strong>, além de realizar automações com <strong>WEB Scrapping</strong> e realizar manutenções em Sistemas Legado.</p>
+	<h2>Possuo experiência com as seguintes Tecnologias:</h2>
+	<ul>
+		<li>PHP 7
+			<ul>
+				<li>Symfony</li>
+				<li>Doctrine</li>
+			</ul>
+		</li>
+		<li>Node.js
+			<ul>
+				<li>Express</li>
+				<li>TypeORM</li>
+			</ul>
+		</li>
+		<li>Angular 8 ao 10</li>
+		<li>Electron</li>
+		<li>Ionic 3 e 4</li>
+	</ul>
 </section>
