--- a/src/app/1_introducao/introducao.component.html
+++ b/src/app/1_introducao/introducao.component.html
@@ -1,9 +1,12 @@
 <section class="content-introducao">
 	<figure>
 		<img alt="Foto de Igor D. Rangel" src="/assets/profile.jpg"/>
+		<figcaption>
+			<h1>Olá, me chamo Igor, seja Bem-Vindo!</h1>
+		</figcaption>
 	</figure>
-	<h1>Olá, me chamo Igor, seja Bem-Vindo! =)</h1>
 	<p>Atualmente estou cursando <strong>Bacharelado em Engenharia de Software</strong> e encontro-me empregado como <strong>Supervisor de Desenvolvimento</strong> em uma empresa de Empréstimos Consignados, onde crio soluções WEB como <strong>Aplicativos</strong> e <strong>Sistemas WEB</strong>, além de realizar automações com <strong>WEB Scrapping</strong> e realizar manutenções em Sistemas Legado.</p>
+	<hr>
 	<h2>Possuo experiência com as seguintes Tecnologias:</h2>
 	<ul>
 		<li>PHP 7
