--- a/src/app/3_projetos/projetos.component.css
+++ b/src/app/3_projetos/projetos.component.css
@@ -1,7 +1,7 @@
 .content-projetos hr {border-style: dashed;color: #FFFFFF;margin: 20px 0;width: 60%;}
 .content-projetos h2 {color: #FFFFFF;line-height: 1.2em;}
 .content-projetos p {color: #FFFFFF;font-size: 1.2em;font-weight: normal;line-height: 1.4em;opacity: .5;text-align: left;}
-.content-projetos .content-items {display: flex;flex-wrap: wrap;}
+.content-projetos .content-items {box-sizing: border-box;display: flex;flex-wrap: wrap;}
 .content-projetos .content-items mat-card {background: transparent;border: 1px dashed #FFFFFF;box-sizing: border-box;color: #FFFFFF;display: flex;flex-direction: column;justify-content: space-between;margin: 5px;width: calc((100% - 20px) / 3);}
 .content-projetos .content-items mat-card:nth-child(3n+1) {margin-left: 0;}
 .content-projetos .content-items mat-card:nth-child(3n) {margin-right: 0;}
@@ -10,3 +10,7 @@
 .content-projetos .content-items mat-card mat-card-subtitle {color: #FFFFFF;font-size: .8em;opacity: .6;}
 .content-projetos .content-items mat-card mat-card-content {padding: 15px 0;}
 .content-projetos .content-items mat-card mat-card-actions {display: flex;justify-content: flex-end;}
+@media screen and (max-width: 960px) {
+.content-projetos .content-items {flex-direction: column;padding: 1px;}
+.content-projetos .content-items mat-card {margin: 5px !important;width: 100%;}
+}
