--- a/src/app/1_introducao/introducao.component.css
+++ b/src/app/1_introducao/introducao.component.css
@@ -10,3 +10,7 @@
 .content-introducao ul li {color: #FFFFFF;font-size: 1.1em;line-height: 1.5em;}
 .content-introducao ul li ul {margin-left: 15px;}
 .content-introducao ul li:before {content: '\2714';margin-right: 5px;}
+@media screen and (max-width: 960px) {
+.content-introducao figure {flex-direction: column;margin-bottom: 20px;}
+.content-introducao figure figcaption h1 {font-size: 1.5em;text-align: center;}
+}
