--- a/src/app/2_historia/historia.component.css
+++ b/src/app/2_historia/historia.component.css
@@ -1,3 +1,6 @@
 .content-historia hr {border-style: dashed;color: #FFFFFF;margin: 20px 0;width: 60%;}
 .content-historia h2 {color: #FFFFFF;line-height: 1.2em;}
 .content-historia p {color: #FFFFFF;font-size: 1.2em;font-weight: normal;line-height: 1.4em;opacity: .5;text-align: left;}
+@media screen and (max-width: 960px) {
+.content-historia hr {width: 100%;}
+}
