--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
 		<a href="https://api.whatsapp.com/send?phone=5522992083819" mat-icon-button target="_blank">
 			<i class="whatsapp"></i>
 		</a>
+    <a href="https://www.youtube.com/channel/UCv_x0wptFjin5pbfRS7DoaQ" mat-icon-button target="_blank">
+      <i class="fa-youtube"></i>
+    </a>
 		<a href="https://www.linkedin.com/in/igordrangel/" mat-icon-button target="_blank">
 			<i class="linked-in"></i>
 		</a>
