--- a/src/app/1_introducao/introducao.component.html
+++ b/src/app/1_introducao/introducao.component.html
@@ -5,7 +5,7 @@
 			<h1>Olá, me chamo Igor, seja Bem-Vindo!</h1>
 		</figcaption>
 	</figure>
-	<p>Atualmente estou cursando <strong>Bacharelado em Engenharia de Software</strong> e encontro-me empregado como <strong>Supervisor de Desenvolvimento</strong> em uma empresa de Empréstimos Consignados, onde crio soluções WEB como <strong>Aplicativos</strong> e <strong>Sistemas WEB</strong>, além de realizar automações com <strong>WEB Scrapping</strong> e realizar manutenções em Sistemas Legado.</p>
+  <p>Atualmente estou cursando <strong>Bacharelado em Engenharia de Software</strong> e encontro-me empregado como <strong>Desenvolvedor Front-End Angular</strong> na <strong><a href="https://www.linkedin.com/company/metaoficial/mycompany" target="_blank">Meta Digital. Simple. Human. Digital Transformation</a></strong>.</p>
 	<hr>
 	<h2>Possuo experiência com as seguintes Tecnologias:</h2>
 	<ul>
