--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,3 @@
-<header>
-	<h1 class="app-name">igordrangel</h1>
-	<nav>
-		<a href="https://api.whatsapp.com/send?phone=5522992083819" mat-icon-button target="_blank">
-			<i class="whatsapp"></i>
-		</a>
-    <a href="https://www.youtube.com/channel/UCv_x0wptFjin5pbfRS7DoaQ" mat-icon-button target="_blank">
-      <i class="fa-youtube"></i>
-    </a>
-		<a href="https://www.linkedin.com/in/igordrangel/" mat-icon-button target="_blank">
-			<i class="linked-in"></i>
-		</a>
-		<a href="https://github.com/igordrangel" mat-icon-button target="_blank">
-			<i class="github"></i>
-		</a>
-	</nav>
-</header>
-<main>
-	<idr-introducao></idr-introducao>
-	<idr-historia></idr-historia>
-	<idr-projetos></idr-projetos>
-</main>
-<footer>&copy; Copyright 2020</footer>
+<idr-cabecalho></idr-cabecalho>
+<idr-articles></idr-articles>
+<idr-rodape></idr-rodape>
