--- a/src/app/components/articles/dev-em-t/article-dev-em-t.component.html
+++ b/src/app/components/articles/dev-em-t/article-dev-em-t.component.html
@@ -1,4 +1,4 @@
 <article>
-  <h2>Dev em T</h2>
-  <idr-dev-em-t></idr-dev-em-t>
+  <h2>Dev em &#60;T&#62;</h2>
+  <idr-dev-em-t [stacks]="stacks"></idr-dev-em-t>
 </article>
