--- a/src/app/components/cabecalho/cabecalho.component.html
+++ b/src/app/components/cabecalho/cabecalho.component.html
@@ -13,7 +13,7 @@
     <figure class="cabecalho__cabecalho__content___foto-perfil-content">
       <img alt="Foto de Perfil" src="./assets/profile.jpg">
       <figcaption>
-        <h1>Olá, me chamo Igor, seja Bem-Vindo! 👋</h1>
+        <h1>Olá, me chamo Igor, seja Bem-Vindo! <span class="cabecalho__cabecalho__content___foto-perfil-content____hand">👋</span></h1>
         <p>Eu sou um Desenvolvedor Fullstack, porém, com especialização em Front-End.<br/>Sempre fui curioso, gosto muito de desafios e inovações.</p>
       </figcaption>
     </figure>
