--- a/src/app/shared/dev-em-t/dev-em-t.component.html
+++ b/src/app/shared/dev-em-t/dev-em-t.component.html
@@ -1,7 +1,11 @@
 <ul class="dev-em-t-content">
-  <li class="dev-em-t-content__secondary-stack">Secondary Stack</li>
-  <li class="dev-em-t-content__secondary-stack">Secondary Stack</li>
-  <li class="dev-em-t-content__main-stack">Main Stack</li>
-  <li class="dev-em-t-content__secondary-stack">Secondary Stack</li>
-  <li class="dev-em-t-content__secondary-stack">Secondary Stack</li>
+  <li *ngFor="let stack of stacks;let i = index" [ngClass]="{
+    'dev-em-t-content__secondary-stack': i !== 2,
+    'dev-em-t-content__main-stack': i === 2
+  }">
+    {{stack.title}}
+    <ul class="dev-em-t-content__description">
+      <li [innerHTML]="stack.description"></li>
+    </ul>
+  </li>
 </ul>
