--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,5 @@ blockquote:before, blockquote:after,
 q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
 section h2:before {content: '>';margin-right: 5px;}
+body {background: #1d1d1d;}
+.dev-em-t-content__description h3 {font-weight: bold;color: rgba(255,255,255,.6);margin: 30px 0;padding: 10px;border: 1px dashed #fff;}
