--- a/src/app/components/cabecalho/cabecalho.component.css
+++ b/src/app/components/cabecalho/cabecalho.component.css
@@ -1,21 +1,16 @@
-.cabecalho {display: flex;flex-direction: column;justify-content: center;align-items: center;padding: 0 20px 0;margin-bottom: 180px;box-sizing: border-box;box-shadow: 0 3px 10px rgba(0,0,0,.3);background: url("../../../assets/cabecalho-wallpapper.jpg") no-repeat;}
-.cabecalho__content {position: relative;top: 180px;display: flex;flex-direction: column;justify-content: center;align-items: center;text-align: center;padding: 50px;width: 40%;background: #1d1d1d;border-radius: 20px;color: #fff;box-shadow: 0 3px 6px rgba(0,0,0,.3);}
-.cabecalho__content___dots {position: absolute;display: flex;flex-direction: column;justify-content: space-between;width: 100%;height: 100%;top: 0;z-index: 0;padding: 10px 13px;box-sizing: border-box;}
-.cabecalho__content___dots i:before {font-family: 'Font Awesome 5 Free';font-size: 10pt;font-weight: 400;position: relative;top: 2px;}
-.cabecalho__content___dots i.dot-circle:before {content: '\f192';color: #f1f1f1;}
-.cabecalho__content___dots____dots-top,
-.cabecalho__content___dots____dots-bottom {display: flex;justify-content: space-between;}
-.cabecalho__cabecalho__content___foto-perfil-content {margin: 0;padding: 0;}
-.cabecalho__cabecalho__content___foto-perfil-content img {width: 120px;height: auto;border-radius: 50%;box-shadow: 1px 3px 6px rgba(0,0,0,.3);}
-.cabecalho__cabecalho__content___foto-perfil-content figcaption {padding: 10px;}
-.cabecalho__cabecalho__content___foto-perfil-content figcaption h1 {margin: 0;padding: 0 0 10px;}
-.cabecalho__cabecalho__content___foto-perfil-content____hand {position: relative;display: inline-flex;top: -5px;left: -15px;animation: shakeHand 1s ease-in-out infinite alternate;}
-@keyframes shakeHand {from {transform: rotate(0);} to {transform: rotate(20deg);}}
-.cabecalho__cabecalho__content___redes-sociais {border-radius: 20px;background: #f1f1f1;padding: 10px 50px;color: #1d1d1d;}
-.cabecalho__cabecalho__content___redes-sociais h2 {color: rgba(0,0,0,.6);font-weight: bold;margin: 0;}
-.cabecalho__cabecalho__content___redes-sociais li {display: inline-block;}
-.cabecalho__cabecalho__content___redes-sociais i:before {font-family: 'Font Awesome 5 Brands';font-size: 18pt;font-weight: 400;position: relative;top: 2px;}
-.cabecalho__cabecalho__content___redes-sociais i.fa-youtube:before {color: #D32F2F;}
-.cabecalho__cabecalho__content___redes-sociais i.github:before {content: '\f09b';}
-.cabecalho__cabecalho__content___redes-sociais i.linked-in:before {content: '\f08c';color: #1976D2;}
-.cabecalho__cabecalho__content___redes-sociais i.whatsapp:before {content: '\f232';color: #2E7D32;}
+.cabecalho {position: relative;display: flex;width: 100%;height: 80px;box-sizing: border-box;padding: 10px 150px;}
+.cabecalho__content {display: flex;justify-content: space-between;align-items: center;width: 100%;}
+.cabecalho__cabecalho__content___foto-perfil-content {display: flex;align-items: center;margin: 20px 0;padding: 0;width: fit-content;}
+.cabecalho__cabecalho__content___foto-perfil-content img {border-radius: 50%;width: 50px;height: 50px;box-shadow: 0 1px 6px rgba(0,0,0,.3);}
+.cabecalho__cabecalho__content___foto-perfil-content figcaption {padding: 0 20px;}
+.cabecalho__cabecalho__content___foto-perfil-content figcaption h1 {padding: 0;margin: 0;font-size: 1.2em;color: #fff;}
+.cabecalho__content nav button {color: #fff}
+.cabecalho__content nav button.active {text-decoration: underline;}
+
+@media (max-width: 1499px) and (orientation: landscape) {
+  .cabecalho {padding: 10px 80px;}
+  .cabecalho__cabecalho__content___foto-perfil-content figcaption h1 {font-size: 1em;}
+}
+@media (max-width: 1199px) and (orientation: landscape) {
+  .cabecalho {padding: 10px 50px;}
+}
