--- a/src/app/components/articles/dev-em-t/article-dev-em-t.component.html
+++ b/src/app/components/articles/dev-em-t/article-dev-em-t.component.html
@@ -1,4 +1,7 @@
 <article>
   <h2>Dev em &#60;T&#62;</h2>
   <idr-dev-em-t [stacks]="stacks"></idr-dev-em-t>
+  <span class="dica">
+    Clique sobre as stacks para visualizar mais detalhes.
+  </span>
 </article>
