--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,23 @@ blockquote, q {quotes: none;}
 blockquote:before, blockquote:after,
 q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
-section h2:before {content: '>';margin-right: 5px;}
-body {background: #1d1d1d;}
-.dev-em-t-content__description h3 {font-weight: bold;color: rgba(255,255,255,.6);margin: 30px 0;padding: 10px;border: 1px dashed #fff;}
+body {background-image: linear-gradient(#7B1FA2 30%, #6A1B9A 70%);width: 100vw;height: 100vh;overflow: hidden;}
+.nobr {white-space: nowrap;}
+button {color: #fff!important;}
+button.outline {border: 1px solid #fff;}
+.mt-20 {margin-top: 20px!important;}
+.mt-50 {margin-top: 50px!important;}
+.d-block {display: block;}
+.d-flex {display: flex;}
+.d-flex.direction-column {flex-direction: column;}
+.d-flex.align-center {justify-content: center;align-items: center;}
+.dev-em-t-content__description h3 {font-weight: bold;color: rgba(0,0,0,.6);margin: 20px 0;padding: 0;}
+.dica {padding: 20px 0;color: #ffffff;}
+.dica:before {font-family: 'Font Awesome 5 Free';font-size: 14pt;font-weight: 400;position: relative;top: 2px;color: #fff;content: '\f059';padding: 0 5px 0 0;}
+
+@media (max-width: 1499px) and (orientation: landscape) {
+  button {font-size: 12px;}
+}
+@media (max-width: 1199px) and (orientation: landscape) {
+
+}
