--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<idr-cabecalho></idr-cabecalho>
-<idr-articles></idr-articles>
-<!--<idr-rodape></idr-rodape>-->
+<main>
+  <idr-cabecalho></idr-cabecalho>
+  <idr-articles></idr-articles>
+  <idr-rodape></idr-rodape>
+</main>
