--- a/src/app/components/articles/dev-em-t/article-dev-em-t.component.html
+++ b/src/app/components/articles/dev-em-t/article-dev-em-t.component.html
@@ -2,6 +2,6 @@
   <h2>Dev em &#60;T&#62;</h2>
   <idr-dev-em-t [stacks]="stacks"></idr-dev-em-t>
   <span class="dica">
-    Clique sobre as stacks para visualizar mais detalhes.
+    Clique nas stacks para mais detalhes.
   </span>
 </article>
