--- a/src/app/components/cabecalho/cabecalho.component.css
+++ b/src/app/components/cabecalho/cabecalho.component.css
@@ -1,5 +1,6 @@
 .cabecalho {position: relative;display: flex;width: 100%;height: 80px;box-sizing: border-box;padding: 10px 150px;}
 .cabecalho__content {display: flex;justify-content: space-between;align-items: center;width: 100%;}
+.cabecalho__content .btn-collapse-menu {display: none;}
 .cabecalho__cabecalho__content___foto-perfil-content {display: flex;align-items: center;margin: 20px 0;padding: 0;width: fit-content;}
 .cabecalho__cabecalho__content___foto-perfil-content img {border-radius: 50%;width: 50px;height: 50px;box-shadow: 0 1px 6px rgba(0,0,0,.3);}
 .cabecalho__cabecalho__content___foto-perfil-content figcaption {padding: 0 20px;}
@@ -7,10 +8,15 @@
 .cabecalho__content nav button {color: #fff}
 .cabecalho__content nav button.active {text-decoration: underline;}
 
-@media (max-width: 1499px) and (orientation: landscape) {
+@media (min-width: 1025px) and (orientation: landscape) {
   .cabecalho {padding: 10px 80px;}
   .cabecalho__cabecalho__content___foto-perfil-content figcaption h1 {font-size: 1em;}
 }
-@media (max-width: 1199px) and (orientation: landscape) {
-  .cabecalho {padding: 10px 50px;}
+@media (max-width: 1024px) {
+  .cabecalho {padding: 10px 30px;z-index: 1;}
+  .cabecalho__content .btn-collapse-menu {display: block;}
+  .cabecalho__content nav {position: absolute;display: flex;justify-content: center;flex-direction: column;top: 101vh;left: 0;width: 100%;height: 30vh;border-radius: 50px 50px 0 0; background: #fff;overflow: hidden;transition: .2s;box-shadow: 0 -8px 10px rgba(0,0,0,.3);}
+  .cabecalho__content nav.show {top: 71vh;}
+  .cabecalho__content nav button {color: #6A1B9A!important;width: 100%;font-size: 1.3em;padding: 10px 0;}
+  .cabecalho__cabecalho__content___foto-perfil-content figcaption h1 {font-size: .9em;}
 }
