--- a/src/styles.css
+++ b/src/styles.css
@@ -26,17 +26,16 @@ button {color: #fff!important;}
 button.outline {border: 1px solid #fff;}
 .mt-20 {margin-top: 20px!important;}
 .mt-50 {margin-top: 50px!important;}
+.text-center {text-align: center;}
 .d-block {display: block;}
 .d-flex {display: flex;}
 .d-flex.direction-column {flex-direction: column;}
 .d-flex.align-center {justify-content: center;align-items: center;}
+.dev-em-t-content__description h2 {font-weight: bold;color: rgba(0,0,0,.6);margin: 0;padding: 10px 0;}
 .dev-em-t-content__description h3 {font-weight: bold;color: rgba(0,0,0,.6);margin: 20px 0;padding: 0;}
-.dica {padding: 20px 0;color: #ffffff;}
+.dica {padding: 20px;color: #ffffff;line-height: 2em;text-align: center;}
 .dica:before {font-family: 'Font Awesome 5 Free';font-size: 14pt;font-weight: 400;position: relative;top: 2px;color: #fff;content: '\f059';padding: 0 5px 0 0;}
 
-@media (max-width: 1499px) and (orientation: landscape) {
+@media (min-width: 1025px) and (orientation: landscape) {
   button {font-size: 12px;}
-}
-@media (max-width: 1199px) and (orientation: landscape) {
-
 }
