--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,1 @@
-main {display: block;margin: 0 auto;width: auto;min-width: 500px;max-width: 1300px;}
+main {display: block;margin: 0 auto;width: auto;max-width: 1300px;}
