--- a/src/app/components/cabecalho/cabecalho.component.css
+++ b/src/app/components/cabecalho/cabecalho.component.css
@@ -12,11 +12,20 @@
   .cabecalho {padding: 10px 80px;}
   .cabecalho__cabecalho__content___foto-perfil-content figcaption h1 {font-size: 1em;}
 }
-@media (max-width: 1024px) {
+@media (min-width: 412px) and (max-width: 1024px) {
   .cabecalho {padding: 10px 30px;z-index: 1;}
   .cabecalho__content .btn-collapse-menu {display: block;}
-  .cabecalho__content nav {position: absolute;display: flex;justify-content: center;flex-direction: column;top: 101vh;left: 0;width: 100%;height: 30vh;border-radius: 50px 50px 0 0; background: #fff;overflow: hidden;transition: .2s;box-shadow: 0 -8px 10px rgba(0,0,0,.3);}
-  .cabecalho__content nav.show {top: 71vh;}
+  .cabecalho__content nav {position: absolute;display: flex;justify-content: center;flex-direction: column;top: 101vh;left: 0;width: 100%;height: 300px;border-radius: 50px 50px 0 0; background: #fff;overflow: hidden;transition: .2s;box-shadow: 0 -8px 10px rgba(0,0,0,.3);}
+  .cabecalho__content nav.show {top: calc(101vh - 300px);}
   .cabecalho__content nav button {color: #6A1B9A!important;width: 100%;font-size: 1.3em;padding: 10px 0;}
   .cabecalho__cabecalho__content___foto-perfil-content figcaption h1 {font-size: .9em;}
+}
+@media (max-width: 411px) {
+  .cabecalho {padding: 10px 15px;z-index: 1;}
+  .cabecalho__content .btn-collapse-menu {display: block;}
+  .cabecalho__content nav {position: absolute;display: flex;justify-content: center;flex-direction: column;top: 101vh;left: 0;width: 100%;height: 300px;border-radius: 50px 50px 0 0; background: #fff;overflow: hidden;transition: .2s;box-shadow: 0 -8px 10px rgba(0,0,0,.3);}
+  .cabecalho__content nav.show {top: calc(101vh - 300px);}
+  .cabecalho__content nav button {color: #6A1B9A!important;width: 100%;font-size: 1.3em;padding: 10px 0;}
+  .cabecalho__cabecalho__content___foto-perfil-content img {width: 40px;height: 40px;}
+  .cabecalho__cabecalho__content___foto-perfil-content figcaption h1 {font-size: .7em;}
 }
