--- a/src/app/components/cabecalho/cabecalho.component.css
+++ b/src/app/components/cabecalho/cabecalho.component.css
@@ -23,9 +23,20 @@
 @media (max-width: 411px) {
   .cabecalho {padding: 10px 15px;z-index: 1;}
   .cabecalho__content .btn-collapse-menu {display: block;}
-  .cabecalho__content nav {position: absolute;display: flex;justify-content: center;flex-direction: column;top: 101vh;left: 0;width: 100%;height: 300px;border-radius: 50px 50px 0 0; background: #fff;overflow: hidden;transition: .2s;box-shadow: 0 -8px 10px rgba(0,0,0,.3);}
-  .cabecalho__content nav.show {top: calc(101vh - 300px);}
+  .cabecalho__content nav {position: absolute;display: none;top: 101vh;left: 0;width: 100%;height: 300px;border-radius: 50px 50px 0 0; background: #fff;overflow: hidden;box-shadow: 0 -8px 10px rgba(0,0,0,.3);}
+  .cabecalho__content nav.show {animation: showNavbar ease-in .2s;display: flex;justify-content: center;flex-direction: column;top: calc(101vh - 300px);}
+  .cabecalho__content nav.animate-hide {animation: hideNavbar ease-in .2s;}
   .cabecalho__content nav button {color: #6A1B9A!important;width: 100%;font-size: 1.3em;padding: 10px 0;}
   .cabecalho__cabecalho__content___foto-perfil-content img {width: 40px;height: 40px;}
   .cabecalho__cabecalho__content___foto-perfil-content figcaption h1 {font-size: .7em;}
+
+  @keyframes showNavbar {
+    from {top: 101vh;}
+    to {top: calc(101vh - 300px);}
+  }
+  @keyframes hideNavbar {
+    0% {display: flex;top: calc(101vh - 300px);}
+    90% {top: 101vh;}
+    100% {display: none;}
+  }
 }
