--- a/src/app/components/articles/articles.component.css
+++ b/src/app/components/articles/articles.component.css
@@ -1,4 +1,4 @@
-article {display: flex;flex-direction: column;align-items: center;justify-content: center;height: calc(100vh - 160px);box-sizing: border-box;}
+article {display: flex;flex-direction: column;align-items: center;justify-content: flex-start;height: calc(100vh - 160px);box-sizing: border-box;overflow: auto;padding: 10px 0;}
 article h2 {position: relative;display: block;text-align: center;padding: 10px 30px;margin: 15px auto;width: fit-content;color: rgba(255,255,255,.7);font-size: 2em;}
 section {display: flex;justify-content: flex-start;align-items: center;padding: 80px 150px;box-sizing: border-box;width: 100%;max-height: calc(100vh - 160px);overflow: hidden;}
 section.introducao {padding: 10% 100px;}
@@ -24,7 +24,6 @@ section.introducao p {width: calc(100% - 50px);padding: 0 80px;margin-bottom: 50
   .redes-sociais ul {width: 80vw;flex-direction: row;}
   .redes-sociais li {display: flex;justify-content: center;align-items: center;width: fit-content;}
   .redes-sociais li:after {display: inline-block;margin: 0;content: '';width: 40px;height: 1px;border-left: none;border-top: 1px solid #fff;}
-  article {overflow: auto;padding: 10px 0;justify-content: flex-start;}
 }
 @media (max-width: 414px) {
   section.introducao {padding: 150px 20px;flex-direction: column-reverse;justify-content: center;}
@@ -32,5 +31,4 @@ section.introducao p {width: calc(100% - 50px);padding: 0 80px;margin-bottom: 50
   .redes-sociais ul {width: 80vw;flex-direction: row;}
   .redes-sociais li {display: flex;justify-content: center;align-items: center;width: fit-content;}
   .redes-sociais li:after {display: inline-block;margin: 0;content: '';width: 40px;height: 1px;border-left: none;border-top: 1px solid #fff;}
-  article {overflow: auto;padding: 10px 0;justify-content: flex-start;}
 }
