--- a/src/app/components/articles/introducao/article-introducao.component.html
+++ b/src/app/components/articles/introducao/article-introducao.component.html
@@ -9,6 +9,6 @@
     </ul>
   </div>
   <div class="d-flex direction-column align-center">
-    <p>Sou um Desenvolvedor Fullstack, com especialização em <span class="nobr">Front-End</span>.<br/>Sempre fui curioso, adoro desafios e inovações.</p>
+    <p>Sou um Desenvolvedor Full-Stack, com especialização em <span class="nobr">Front-End</span>.<br/>Sempre fui curioso, adoro desafios e inovações.</p>
   </div>
 </section>
