--- a/src/app/components/container-app/header/header.component.html
+++ b/src/app/components/container-app/header/header.component.html
@@ -1,23 +1,22 @@
 <header class="animate__animated animate__fadeInDown">
-  <nav>
-    <a routerLink="/home" routerLinkActive="active">
-      <i class="fa-solid fa-house"></i>
-      Início
-    </a>
+  <div class="header-content">
+    <nav>
+      <a routerLink="/home" routerLinkActive="active">
+        <i class="fa-solid fa-house"></i>
+        Início
+      </a>
 
-    <a routerLink="/projetos" routerLinkActive="active">
-      <i class="fa-solid fa-diagram-project"></i>
-      Projetos
-    </a>
+      <a routerLink="/projetos" routerLinkActive="active">
+        <i class="fa-solid fa-diagram-project"></i>
+        Projetos
+      </a>
+    </nav>
 
-    <a routerLink="/skills" routerLinkActive="active">
-      <i class="fa-solid fa-wand-magic-sparkles"></i>
-      Skills
-    </a>
-  </nav>
+    <app-logotype />
 
-  <a href="https://client-hub.igordrangel.com.br" target="_blank" class="outside-link">
-    Área do Cliente
-    <i class="fa-solid fa-arrow-up-right-from-square"></i>
-  </a>
+    <a href="https://client-hub.igordrangel.com.br" target="_blank" class="outside-link">
+      Área do Cliente
+      <i class="fa-solid fa-arrow-up-right-from-square"></i>
+    </a>
+  </div>
 </header>
