--- a/src/app/pages/home/home.page.component.html
+++ b/src/app/pages/home/home.page.component.html
@@ -1,3 +1,45 @@
 <app-container>
-  <h1>Home</h1>
+
+  <app-container-intro>
+
+    <ng-container left-side>
+      <img src="avatar/me.png" />
+    </ng-container>
+
+    <ng-container right-side>
+      <app-title-text>
+        Transformando sonho em realidade com código e design.
+      </app-title-text>
+
+      <app-subtitle-text>
+        Sou um <strong>Desenvolvedor Full-Stack</strong>, e sou dedicado a transformar ideias em aplicações web inovadoras. Fique a vontade para explorar meus projetos, onde minha especialidade está em desenvolvimento <strong>Angular</strong> e <strong>Node.js</strong> para aplicações WEB.
+      </app-subtitle-text>
+    </ng-container>
+
+  </app-container-intro>
+
+  <app-section-container>
+
+    <ng-container title>Skills</ng-container>
+
+    <ng-container content>
+      <app-flexbox-wrap>
+        <app-icon icon="angular">Angular</app-icon>
+        <app-icon icon="bootstrap">Bootstrap</app-icon>
+        <app-icon icon="nestjs">Nest.js</app-icon>
+        <app-icon icon="express">Express</app-icon>
+        <app-icon icon="fastify">Fastify</app-icon>
+        <app-icon icon="vitest">Vitest</app-icon>
+        <app-icon icon="jest">Jest</app-icon>
+        <app-icon icon="prisma">Prisma</app-icon>
+        <app-icon icon="typeorm">TypeORM</app-icon>
+        <app-icon icon="mysql">MySQL</app-icon>
+        <app-icon icon="postgresql">PostgreSQL</app-icon>
+        <app-icon icon="puppeteer">Puppeteer</app-icon>
+        <app-icon icon="azureFunctions">Azure Functions</app-icon>
+      </app-flexbox-wrap>
+    </ng-container>
+
+  </app-section-container>
+
 </app-container>
