implementando sessão de projetos

--- a/src/app/components/container-app/header/header.component.html
+++ b/src/app/components/container-app/header/header.component.html
@@ -1,12 +1,17 @@
 <header class="animate__animated animate__fadeInDown">
   <div class="header-content">
     <nav>
-      <a routerLink="/home" routerLinkActive="active">
+      <a routerLink="/" routerLinkActive="active">
         <i class="fa-solid fa-house"></i>
         Início
       </a>
 
-      <a routerLink="/projetos" routerLinkActive="active">
+      <a href="#skills">
+        <i class="fa-solid fa-wand-magic-sparkles"></i>
+        Skills
+      </a>
+
+      <a href="#projetos">
         <i class="fa-solid fa-diagram-project"></i>
         Projetos
       </a>
