--- a/src/app/components/section-container/section-container.component.css
+++ b/src/app/components/section-container/section-container.component.css
@@ -1,7 +1,7 @@
 section {
   display: flex;
   flex-direction: column;
-  margin: 2rem auto;
+  margin: 2rem auto 4rem;
   gap: 6rem;
   max-width: 1280px;
 }
