--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 @import url(theme/variables.css);
+@import url(theme/timeline.css);
+@import url(theme/button.css);
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: var(--gray-100);
 }
 
 :root {
@@ -17,4 +18,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body {
+  background-color: var(--gray-100);
 }
