--- a/src/app/components/post/post.component.css
+++ b/src/app/components/post/post.component.css
@@ -1,25 +1,54 @@
+@keyframes pulse {
+  from {
+    background-color: var(--blue-400);
+  }
+
+  to {
+    background-color: var(--blue-200);
+  }
+}
+
 .post-container {
+  position: relative;
   display: flex;
   align-items: center;
   gap: 5rem;
 }
 
+
+.post-container .post-line {
+  position: absolute;
+  left: 1.1rem;
+  width: 1px;
+  height: calc(100% + 2rem);
+  background-color: var(--gray-300);
+}
+
 .post-container .post-radio {
-  width: 1.8rem;
-  height: 1.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.3rem;
+  height: 2.3rem;
   border-radius: 50%;
   border: 0.4rem solid var(--gray-1000);
   background-color: var(--white);
-  padding: 0.4rem;
+  padding: 0;
+  z-index: 1;
 }
 
-.post-container .post-radio::before {
-  content: ' ';
-  width: 1rem;
-  height: 1rem;
+.post-container .post-radio span {
+  display: flex;
+  width: 1.1rem;
+  height: 1.1rem;
   border-radius: 50%;
   border: 1px solid var(--gray-1000);
   background-color: var(--blue-400);
+  animation: pulse 1s ease-in-out infinite alternate;
+}
+
+.post-content {
+  width: calc(100% - 8rem);
 }
 
 .post-title {
