--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,5 +1,9 @@
 <div class="post-container">
-  <div class="post-radio"></div>
+  <div class="post-line"></div>
+
+  <div class="post-radio">
+    <span></span>
+  </div>
 
   <div class="post-content">
     <h2 class="post-title">
