--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="card-container">
   <div class="card-content">
-    <img [src]="thumbnail()" />
+    <img [ngSrc]="thumbnail()" width="400" height="200" priority [alt]="alt()" />
 
     <h2 class="card-title">
       <ng-content select="[title]" />
