--- a/src/app/components/container-app/footer/footer.component.html
+++ b/src/app/components/container-app/footer/footer.component.html
@@ -3,19 +3,19 @@
     <app-logotype />
 
     <div class="social-media">
-      <a href="https://github.com/igordrangel" target="_blank">
+      <a href="https://github.com/igordrangel" aria-label="Link para meu Github" target="_blank">
         <i class="fa-brands fa-github"></i>
       </a>
 
-      <a href="https://www.linkedin.com/in/igordrangel/" target="_blank">
+      <a href="https://www.linkedin.com/in/igordrangel/" aria-label="Link para meu LinkedIn" target="_blank">
         <i class="fa-brands fa-linkedin"></i>
       </a>
 
-      <a href="https://www.instagram.com/igordrangel" target="_blank">
+      <a href="https://www.instagram.com/igordrangel" aria-label="Link para meu Instagram" target="_blank">
         <i class="fa-brands fa-instagram"></i>
       </a>
 
-      <a href="https://www.youtube.com/@igord.rangel5958" target="_blank">
+      <a href="https://www.youtube.com/@igord.rangel5958" aria-label="Link para meu Youtube" target="_blank">
         <i class="fa-brands fa-youtube"></i>
       </a>
     </div>
