--- a/src/app/components/icon/icon.component.html
+++ b/src/app/components/icon/icon.component.html
@@ -1,5 +1,5 @@
 <div class="icon-content">
-  <img [src]="'icons/' + icon() + '.svg'" />
+  <img [src]="'icons/' + icon() + '.svg'" [alt]="'Ícone de ' + icon()" />
 
   <small>
     <ng-content />
