--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -1,4 +1,5 @@
 .card-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -8,14 +9,18 @@
   box-shadow: 0 3px 10px rgba(0,0,0,.3);
   border: 1px solid var(--gray-200);
   border-radius: 2rem;
+  width: 100%;
   overflow: hidden;
 }
 
 .card-container .card-content {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   background-color: var(--white);
+  width: 100%;
+  height: 100%;
 }
 
 .card-content img {
