--- a/src/app/pages/home/home.page.component.html
+++ b/src/app/pages/home/home.page.component.html
@@ -3,7 +3,12 @@
   <app-container-intro>
 
     <ng-container left-side>
-      <img src="avatar/me.png" alt="Minha foto de perfil gerada através de IA" />
+      <img
+        id="profile-img"
+        class="animate__animated animate__fadeIn"
+        src="avatar/me.png"
+        alt="Minha foto de perfil gerada através de IA"
+      />
     </ng-container>
 
     <ng-container right-side>
