--- a/src/app/components/subtitle-text/subtitle-text.component.css
+++ b/src/app/components/subtitle-text/subtitle-text.component.css
@@ -4,3 +4,10 @@ p {
   font-size: 2rem;
   letter-spacing: 0.1rem;
 }
+
+@media (max-width: 950px) {
+  p {
+    text-align: justify;
+    font-size: 2rem;
+  }
+}
