--- a/src/app/components/title-text/title-text.component.css
+++ b/src/app/components/title-text/title-text.component.css
@@ -4,3 +4,10 @@ h1 {
   font-size: 6rem;
   letter-spacing: 0.1rem;
 }
+
+@media (max-width: 950px) {
+  h1 {
+    text-align: center;
+    font-size: 3rem;
+  }
+}
