Refactor code structure for improved readability and maintainability

--- a/src/app/pages/home/home.page.component.html
+++ b/src/app/pages/home/home.page.component.html
@@ -30,6 +30,7 @@
     <ng-container content>
       <app-flexbox-wrap>
         <app-icon icon="angular">Angular</app-icon>
+        <app-icon icon="tailwind">Tailwind CSS</app-icon>
         <app-icon icon="bootstrap">Bootstrap</app-icon>
         <app-icon icon="nestjs">Nest.js</app-icon>
         <app-icon icon="express">Express</app-icon>
